# adventOfCodeChallenge

./: .gitignore  README.md  adventOfCode  generateDay  pyproject.toml  runChallenge
adventOfCode/: Leaderboard_data.ipynb  Untitled.ipynb  base.ipynb
adventOfCode/2021/: generateDay
adventOfCode/2021/day6/: Lanternfish.ipynb
adventOfCode/2021/day9/: main.ipynb
adventOfCode/2024/: base.ipynb  generateDay
adventOfCode/2024/day1/: main.ipynb
adventOfCode/2024/day10/: main.ipynb
adventOfCode/2024/day11/: main.ipynb
adventOfCode/2024/day2/: main.ipynb
adventOfCode/2024/day3/: main.ipynb
adventOfCode/2024/day4/: main.ipynb
adventOfCode/2024/day5/: main.ipynb
adventOfCode/2024/day6/: main.ipynb
adventOfCode/2024/day7/: main.ipynb
adventOfCode/2024/day8/: main.ipynb
adventOfCode/2024/day9/: main.ipynb
adventOfCode/day10/: main.ipynb
adventOfCode/day11/: main.ipynb
adventOfCode/day12/: main.ipynb
adventOfCode/day13/: main.ipynb
adventOfCode/day14/: main.ipynb
adventOfCode/day15/: main.ipynb
adventOfCode/day16/: main.ipynb
adventOfCode/day17/: main.ipynb
adventOfCode/day19/: main.ipynb
adventOfCode/day2/: main.py
adventOfCode/day20/: main.ipynb
adventOfCode/day21/: main.ipynb
adventOfCode/day22/: main.ipynb
adventOfCode/day23/: main.ipynb
adventOfCode/day25/: main.ipynb
adventOfCode/day6/: Lanternfish.ipynb
adventOfCode/day6/.ipynb_checkpoints/: Lanternfish-checkpoint.ipynb
adventOfCode/day8/: Untitled.ipynb  main.ipynb
adventOfCode2021/day18/: main.ipynb
adventOfCode2021/day24/: export.py  main.ipynb
adventOfCode2021/day3/: main.py
adventOfCode2021/day4/: main.py
adventOfCode2021/day7/: The Treachery of Whales.ipynb
day1/: main.py  sonar_sweep.py
day4/: Giant Squid.ipynb
day4/.ipynb_checkpoints/: Giant Squid-checkpoint.ipynb
day5/: Hydrothermal Venture.ipynb
day6/: Untitled.ipynb  main.py
