[tool.poetry]
name = "adventOfCode"
version = "0.1.0"
description = ""
authors = ["Bryan Kristiono <bryan.m.kristiono@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
# Juptyer extension stuff:
ipywidgets = "*"
jupyterlab_execute_time = "*"  # 2021-03: You need to add {"recordTiming": true} to Settings -> Notebook for this to work
jupytext = "*"  # Automatic and transparent management of ipynbs as .py files
jupyterlab = "*"
tqdm = "^4.62.3"
jupyterlab-code-formatter = "^1.4.10"

[tool.poetry.dev-dependencies]
jupyterlab-code-formatter = "^1.4.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"